--- a/ppas/20190225/20190225_02.md
+++ b/ppas/20190225/20190225_02.md
@@ -191,6 +191,7 @@ U.S. Cellular Field
 
 **转换案例**
 ```
+-- 案例1
 -- 1. Oracle数据库（regexp_like）
 SQL> select * from t_regexp_like where regexp_like(f, '^10.|^121.0.29.*') ;
 
@@ -208,6 +209,33 @@ edb=# select * from t_regexp_like where f ~ '^10.|^121.0.29.*';
  121.0.29.10
  10.10.10.10
 (2 rows)
+
+edb=# 
+
+-- 案例2：
+-- 1. Oracle数据库（regexp_like）
+SQL> select * from t_regexp_like where regexp_like(f, '*adam*') ;
+
+F
+--------------------
+hzadam123
+
+SQL> 
+
+-- 2.PPAS数据库（LIKE操作符）
+edb=# select * from t_regexp_like where f like '%adam%';
+     f     
+-----------
+ hzadam123
+(1 row)
+
+edb=#
+
+edb=# select * from t_regexp_like where f ~ '.*adam.*';
+     f     
+-----------
+ hzadam123
+(1 row)
 
 edb=# 
 
