--- a/ppas/20190225/20190225_03.md
+++ b/ppas/20190225/20190225_03.md
@@ -2,6 +2,18 @@
 ---
 
 ### 一、背景介绍
+数据库触发器的启用和禁用是一个很常见的功能。
+
+1. Oracle支持触发器的启用和禁用,且是基于触发器（TRIGGER）的，语法如下：
+
+```
+ALTER TRIGGER schmea_name.trigger_name ENABLE/DISABLE;
+```
+
+2. PPAS/PG同样支持触发器的启用和禁止，是基于表（TABLE）的，语法如下：
+```
+ALTER TABLE [ IF EXISTS ] [ ONLY ] table_name [ * ]  DISABLE|ENABLE  [ REPLICA | ALWAYS ]  TRIGGER [ trigger_name | ALL | USER ];
+```
 
 
 ### 二、转换规则
