--- a/ppas/20190225/20190225_03.md
+++ b/ppas/20190225/20190225_03.md
@@ -7,7 +7,11 @@
 1. Oracle支持触发器的启用和禁用,且是基于触发器（TRIGGER）的，语法如下：
 
 ```
+-- 1. 启用/禁用某个表的 特定trigger
 ALTER TRIGGER schmea_name.trigger_name ENABLE/DISABLE;
+
+-- 2. 启用/禁用某个表的 全部trigger
+ALTER TABLE schema_name.table_name ENABLE/DISABLE ALL TRIGGERS;
 ```
 
 2. PPAS/PG同样支持触发器的启用和禁止，是基于表（TABLE）的，语法如下：
