--- a/ppas/20190225/20190225_03.md
+++ b/ppas/20190225/20190225_03.md
@@ -7,7 +7,7 @@
 1. Oracle支持触发器的启用和禁用,且是基于触发器（TRIGGER）的，语法如下：
 
 ```
--- 1. 启用/禁用某个表的 特定trigger
+-- 1. 启用/禁用某个特定的trigger
 ALTER TRIGGER schmea_name.trigger_name ENABLE/DISABLE;
 
 -- 2. 启用/禁用某个表的 全部trigger
@@ -24,3 +24,5 @@ ALTER TABLE [ IF EXISTS ] [ ONLY ] table_name [ * ]  DISABLE|ENABLE  [ REPLICA |
 
 
 ### 三、参考链接
+1.[https://docs.oracle.com/cd/B28359_01/server.111/b28310/general004.htm#ADMIN11534](https://docs.oracle.com/cd/B28359_01/server.111/b28310/general004.htm#ADMIN11534)
+2. [https://www.postgresql.org/docs/10/sql-altertable.html](https://www.postgresql.org/docs/10/sql-altertable.html)
