--- a/ppas/20190225/20190225_03.md
+++ b/ppas/20190225/20190225_03.md
@@ -18,7 +18,9 @@ ALTER TABLE schema_name.table_name ENABLE/DISABLE ALL TRIGGERS;
 ```
 ALTER TABLE [ IF EXISTS ] [ ONLY ] table_name [ * ]  DISABLE|ENABLE  [ REPLICA | ALWAYS ]  TRIGGER [ trigger_name | ALL | USER ];
 ```
+禁用或者启用内部生成的约束触发器要求超级用户特权。触发器引发机制也受到配置变量 session_replication_role的影响。当复制角色是 “origin”（默认）或者“local”时，被简单禁用的触发器将被触发。被配置为ENABLE REPLICA的触发器只有在会话处于“replica”模式时才将被触发。被配置为 ENABLE ALWAYS的触发器的触发不会考虑当前复制模式。
 
+这个命令要求一个SHARE ROW EXCLUSIVE锁。
 
 ### 二、转换规则
 
