--- a/ppas/20190225/20190225_03.md
+++ b/ppas/20190225/20190225_03.md
@@ -23,7 +23,82 @@ ALTER TABLE [ IF EXISTS ] [ ONLY ] table_name [ * ]  DISABLE|ENABLE  [ REPLICA |
 这个命令要求一个SHARE ROW EXCLUSIVE锁。
 
 ### 二、转换规则
+1. Oracle数据库
+```
+SQL> create table tab_user(
+  2    id number(11) primary key,
+  3    username varchar(50),
+  4    password varchar(50)
+  5  );
 
+Table created.
+
+SQL> create sequence my_seq increment by 1 start with 1 nomaxvalue nocycle cache 20;
+
+Sequence created.
+
+SQL> CREATE OR REPLACE TRIGGER MY_TGR
+  2   BEFORE INSERT ON TAB_USER
+  3   FOR EACH ROW
+  4  DECLARE
+  5   NEXT_ID NUMBER;
+  6  BEGIN
+  7   SELECT MY_SEQ.NEXTVAL INTO NEXT_ID FROM DUAL;
+  8   :NEW.ID := NEXT_ID; 
+  9  END;
+ 10  /
+
+Trigger created.
+
+SQL> ALTER TRIGGER MY_TGR DISABLE;
+
+Trigger altered.
+
+SQL> select TRIGGER_NAME,TRIGGER_TYPE,TABLE_NAME,STATUS from user_triggers where TRIGGER_NAME='MY_TGR';
+
+TRIGGER_NAME                   TRIGGER_TYPE     TABLE_NAME                     STATUS
+------------------------------ ---------------- ------------------------------ --------
+MY_TGR                         BEFORE EACH ROW  TAB_USER                       DISABLED   -- 触发器是禁用状态
+
+SQL> 
+
+```
+
+2. PPAS/PG数据库
+```
+edb=# create table tab_user(
+edb(#   id number(11) primary key,
+edb(#   username varchar(50),
+edb(#   password varchar(50)
+edb(# );
+CREATE TABLE
+edb=# 
+edb=# create sequence my_seq increment by 1 start with 1 nomaxvalue no cycle cache 20;
+CREATE SEQUENCE
+edb=# 
+edb=# CREATE OR REPLACE TRIGGER MY_TGR
+edb-#  BEFORE INSERT ON TAB_USER
+edb$#  FOR EACH ROW
+edb$# DECLARE
+edb$#  NEXT_ID NUMBER;
+edb$# BEGIN
+edb$#  SELECT MY_SEQ.NEXTVAL INTO NEXT_ID FROM DUAL;
+edb$#  :NEW.ID := NEXT_ID; 
+edb$# END;
+CREATE TRIGGER
+edb=# 
+edb=# ALTER TABLE TAB_USER DISABLE TRIGGER MY_TGR ;
+ALTER TABLE
+edb=# 
+edb=# select tgname,tgtype,tgenabled from pg_trigger where tgname='my_tgr';
+ tgname | tgtype | tgenabled 
+--------+--------+-----------
+ my_tgr |      7 | D         -- 触发器是禁用状态
+(1 row)
+
+edb=# 
+
+```
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/B28359_01/server.111/b28310/general004.htm#ADMIN11534](https://docs.oracle.com/cd/B28359_01/server.111/b28310/general004.htm#ADMIN11534)
