--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -7,8 +7,8 @@ ROWID是Oracle的一个伪列，返回数据库表每行的物理地址。主要
 2. 文件编号
 3. 块编号
 4. 行编号
-通常使用DBMS_ROWID包、函数ROWIDTOCHAR()和CHARTOROWID()进行常规操作。
-通常rowid值是可以唯一标示一行的。但集群中的不同表存储在一起，可能有相同的rowid。伪列ROWID包含2种数据类型：ROWID 或者 UROWID。
+
+使用DBMS_ROWID包、函数ROWIDTOCHAR()和CHARTOROWID()进行常规操作。通常rowid值是可以唯一标示一行的。但集群中的不同表存储在一起，可能有相同的rowid。伪列ROWID包含2种数据类型：ROWID 或者 UROWID。
 
 **注意：不建议使用rowid作为表的主键，因为的rowid的值在某些情况下是会发生变化的。**
 
