--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -12,11 +12,21 @@ ROWID是Oracle的一个伪列，返回数据库表每行的物理地址。主要
 
 **注意：不建议使用rowid作为表的主键，因为的rowid的值在某些情况下是会发生变化的。**
 
++ 行记录被删除(DELETED)，然后再重新插入(RE-INSERTED)。
++ EXPORT/IMPORT 导出导入操作。
++ ALTER TABLE table_name MOVE; 命令。
++ 分区表的分区键值更新，导致记录在分区间移动。
++ ALTER TABLE table_name SHRINK SPACE COMPACT; 命令。
++ FLASHBACK TABLE table_name TO ... 命令。
++ COMPRESS 压缩操作。
+
+**注意：行迁移和行链接 不会导致rowid发生变化。**
+
 
 
 ### 二、转换规则
 
 ### 三、参考链接
 1.[https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254](https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254)
-
-2. 
+2.[https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768](https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768)
+3.
