--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -21,12 +21,41 @@ ROWID是Oracle的一个伪列，返回数据库表每行的物理地址。主要
 + COMPRESS 压缩操作。
 
 **注意：行迁移和行链接 不会导致rowid发生变化。**
+```
+SQL> select d.*,rowid from scott.dept d where rownum=1;
 
+    DEPTNO DNAME          LOC           ROWID
+---------- -------------- ------------- ------------------
+        10 ACCOUNTING     NEW YORK      AAAVRCAAEAAAACHAAA
 
+SQL> 
+```
+
+PPAS/PG没有类似Oracle格式的rowid伪列，但是有系统列，如：OID、CTID等。其中CTID记录的是行号，由BLOCK_ID和ITEM_ID组成，即哪个数据块的哪条记录。和Oracle的rowid类似，只是形式不一样。通过都是用来做唯一性去重使用的。OID、CTID同样不是唯一的，可能会反生变化。同样可以使用OID来标示。
+```
+edb=# select t1.*,ctid from t1;
+ id | name  |  ctid  
+----+-------+--------
+  1 | 1-t1  | (0,1)
+  2 | 2-t1  | (0,2)
+  3 | 3-t1  | (0,3)
+  4 | 4-t1  | (0,4)
+  5 | 5-t1  | (0,5)
+  6 | 6-t1  | (0,6)
+  7 | 7-t1  | (0,7)
+  8 | 8-t1  | (0,8)
+  9 | 9-t1  | (0,9)
+ 10 | 10-t1 | (0,10)
+(10 rows)
+
+edb=# 
+```
 
 ### 二、转换规则
+
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254](https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254)
 2.[https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768](https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768)
-3.
+3.[https://github.com/digoal/blog/blob/master/201711/20171108_01.md](https://github.com/digoal/blog/blob/master/201711/20171108_01.md)
