--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -52,7 +52,9 @@ edb=#
 ```
 
 ### 二、转换规则
-
+Oracle目前使用rowid主要有以下几个用途：
+1. 直接在Where过滤条件中指定，如：WHERE ROWID='AAAVRCAAEAAAACHAAA';
+2. 在SQL中通过rowid来达到唯一性，进行去重。
 
 
 
