--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -53,8 +53,15 @@ edb=#
 
 ### 二、转换规则
 Oracle目前使用rowid主要有以下几个用途：
-1. 直接在Where过滤条件中指定，如：WHERE ROWID='AAAVRCAAEAAAACHAAA';
-2. 在SQL中通过rowid来达到唯一性，进行去重。
+1. 直接在Where过滤条件中指定具体rowid值，如：WHERE ROWID='AAAVRCAAEAAAACHAAA';  **<=== 这中情况，只能结合业务修改SQL**
+2. 在SQL中通过rowid来达到唯一性，进行去重。<=== 这种情况，更常见
+```
+-- PPAS/PG中的：rowid、oid、ctid
+-- ctid：是物理地址，默认都会有
+-- oid：受参数default_with_oids=on 或者 create table (....) with oids; 控制。
+-- PPAS中：rowid 其实是oid的别名，而且受参数 default_with_rowids=on 参数控制。
+
+```
 
 
 
