--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -54,19 +54,45 @@ edb=#
 ### 二、转换规则
 Oracle目前使用rowid主要有以下几个用途：
 1. 直接在Where过滤条件中指定具体rowid值，如：WHERE ROWID='AAAVRCAAEAAAACHAAA';  **<=== 这中情况，只能结合业务修改SQL**
-2. 在SQL中通过rowid来达到唯一性，进行去重。<=== 这种情况，更常见
+2. 在SQL中通过rowid来达到唯一性，进行去重。 **<=== 这种情况，更常见**
 ```
 -- PPAS/PG中的：rowid、oid、ctid
 -- ctid：是物理地址，默认都会有
 -- oid：受参数default_with_oids=on 或者 create table (....) with oids; 控制。
 -- PPAS中：rowid 其实是oid的别名，而且受参数 default_with_rowids=on 参数控制。
+-- 1. Oracle案例
+SELECT id, 
+       table_id,  
+       gmt_create, 
+       row_id
+FROM (
+	SELECT id, 
+	       table_id, 
+	       gmt_create, 
+	       rowid AS row_id  -- rowid 用来唯一标示一样
+	FROM tab_rowid
+	ORDER BY id
+)
+WHERE rownum <= 100000;
+
+-- 2. PPAS案例
+SELECT id, 
+       table_id,  
+       gmt_create, 
+       row_id
+FROM (
+	SELECT id, 
+	       table_id, 
+	       gmt_create, 
+	       rowid AS row_id -- 如果PPAS中 default_with_oids=on && default_with_rowids=on 都开启，可以直接使用不用更改，不然考虑修改为ctid。
+	FROM tab_rowid 
+	ORDER BY id
+)
+WHERE rownum <= 100000;
 
 ```
-
-
 
 
 ### 三、参考链接
 1.[https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254](https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254)
 2.[https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768](https://docs.oracle.com/database/121/ARPLS/d_rowid.htm#ARPLS67768)
-3.[https://github.com/digoal/blog/blob/master/201711/20171108_01.md](https://github.com/digoal/blog/blob/master/201711/20171108_01.md)
