--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -92,6 +92,12 @@ WHERE rownum <= 100000;
 
 ```
 
+**注意：通过rowid来达到唯一性，并不稳妥，毕竟rowid是会变化的，因此还是建议使用能唯一标示的值进行替换**
++  serial8 :自增数据类型。
++  IDENTITY 唯一标识：PPAS10+/PG10+ 提供。
++  oids 唯一标识：
+
+可以参考：[PostgreSQL Oracle 兼容性之 - rowid (CREATE TABLE WITH OIDS)](https://github.com/digoal/blog/blob/master/201711/20171108_01.md)
 
 ### 三、参考链接
 1.[https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254](https://docs.oracle.com/database/121/SQLRF/pseudocolumns008.htm#SQLRF00254)
