--- a/ppas/20190226/20190226_01.md
+++ b/ppas/20190226/20190226_01.md
@@ -93,9 +93,11 @@ WHERE rownum <= 100000;
 ```
 
 **注意：通过rowid来达到唯一性，并不稳妥，毕竟rowid是会变化的，因此还是建议使用能唯一标示的值进行替换**
-+  serial8 :自增数据类型。
-+  IDENTITY 唯一标识：PPAS10+/PG10+ 提供。
-+  oids 唯一标识：
++  **serial8** :自增数据类型。
++  **IDENTITY 唯一标识**：PPAS10+/PG10+ 提供，GENERATED ALWAYS AS IDENTITY。
++  **oids 唯一标识**：oid是32位的，最大支持40亿，超过不适用。
++  **UUID**:uuid数据类型，需要安装 uuid-ossp 插件，使用uuid_generate_v4()函数。
++  **全局ID生成器**：自定的唯一ID生成器，如：日期+随机数 等。
 
 可以参考：[PostgreSQL Oracle 兼容性之 - rowid (CREATE TABLE WITH OIDS)](https://github.com/digoal/blog/blob/master/201711/20171108_01.md)
 
