--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -2,7 +2,8 @@
 ---
 
 ### 一、背景介绍
-FORALL语句多次运行DML操作，值主要在VALUES 和 WHERE 字句有所不同，来自于 collections 集合 和 arrays 数组。语法主要如下：
+FORALL语句多次运行DML操作，值主要在VALUES 和 WHERE 字句有所不同，来自于 collections 集合 和 arrays 数组。基本语法如下：
+
 ![forall_statement](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/img_text/forall_statement.htm)
 
 
