--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -2,15 +2,15 @@
 ---
 
 ### 一、背景介绍
-FORALL语句多次运行DML操作，值主要在VALUES 和 WHERE 字句有所不同，来自于 collections 集合 和 arrays 数组。Oracle基本语法如下：
-
+FORALL语句多次运行DML操作，值主要在VALUES 和 WHERE 字句有所不同，来自于 collections 集合 和 arrays 数组。
+1. Oracle基本语法如下：
 **forall_statement：**
 ![forall_statement](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/img/forall_statement.gif)
 
 **bounds_clause：**
 ![bounds_clause](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/img/bounds_clause.gif)
 
-PPAS基本语法如下：
+2. PPAS基本语法如下：
 ```
 FORALL index IN lower_bound .. upper_bound
   { insert_stmt | update_stmt | delete_stmt };
