--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -11,11 +11,14 @@ FORALL语句多次运行DML操作，值主要在VALUES 和 WHERE 字句有所不
 **bounds_clause：**
 ![bounds_clause](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/img/bounds_clause.gif)
 
+SAVE EXCEPTIONS：控制遇到异常 commit 或者 rollback。
+
 2. **PPAS基本语法如下**：
 ```
 FORALL index IN lower_bound .. upper_bound
   { insert_stmt | update_stmt | delete_stmt };
 ```
+遇到异常自动 rollback。
 
 ### 二、转换规则
 
