--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -21,14 +21,17 @@ FORALL index IN lower_bound .. upper_bound
 遇到异常（exception）自动 rollback。
 
 ### 二、转换规则
-1. 
+1.FORALL index IN lower_bound ... upper_bound dmlstatement; 形式
 
-2.
 
-3. 
+2.FORALL index IN INDICES OF collection dmlstatement; 形式
 
+
+3.FORALL index IN VALUES OF index_collection dmlstatement; 形式
 
 
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/forall_statement.htm#LNPLS01321](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/forall_statement.htm#LNPLS01321)
+2.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/tuning.htm#LNPLS864](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/tuning.htm#LNPLS864)
+3.[https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.161.html](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.161.html)
