--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -22,7 +22,130 @@ FORALL index IN lower_bound .. upper_bound
 
 ### 二、转换规则
 1.**FORALL index IN lower_bound ... upper_bound dmlstatement; 形式**
+```
+-- Oracle数据库
+SQL> select * from emp;
 
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7369 SMITH      CLERK           7902 17-DEC-80                 800                    20
+      7499 ALLEN      SALESMAN        7698 20-FEB-81                1600        300         30
+      7521 WARD       SALESMAN        7698 22-FEB-81                1250        500         30
+      7566 JONES      MANAGER         7839 02-APR-81                2975                    20
+      7654 MARTIN     SALESMAN        7698 28-SEP-81                1250       1400         30
+      7698 BLAKE      MANAGER         7839 01-MAY-81                2850                    30
+      7782 CLARK      MANAGER         7839 09-JUN-81                2450                    10
+      7788 SCOTT      ANALYST         7566 19-APR-87                3000                    20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 TURNER     SALESMAN        7698 08-SEP-81                1500          0         30
+      7876 ADAMS      CLERK           7788 23-MAY-87                1100                    20
+      7900 JAMES      CLERK           7698 03-DEC-81                 950                    30
+      7902 FORD       ANALYST         7566 03-DEC-81                3000                    20
+      7934 MILLER     CLERK           7782 23-JAN-82                1300                    10
+
+14 rows selected.
+
+SQL> 
+SQL> 
+SQL> 
+SQL> CREATE TABLE emp_copy AS SELECT * FROM emp where 1=0;
+
+Table created.
+
+SQL> DECLARE
+  2      TYPE emp_tbl IS TABLE OF emp%ROWTYPE INDEX BY BINARY_INTEGER;
+  3      t_emp emp_tbl;
+  4  BEGIN
+  5      SELECT * BULK COLLECT INTO t_emp FROM emp;
+  6  
+  7      FORALL i IN t_emp.FIRST .. t_emp.LAST
+  8             INSERT INTO emp_copy VALUES t_emp(i);
+  9  END;
+ 10  /
+
+PL/SQL procedure successfully completed.
+
+SQL> 
+SQL> select * from emp_copy
+  2  ;
+
+     EMPNO ENAME      JOB              MGR HIREDATE                  SAL       COMM     DEPTNO
+---------- ---------- --------- ---------- ------------------ ---------- ---------- ----------
+      7369 SMITH      CLERK           7902 17-DEC-80                 800                    20
+      7499 ALLEN      SALESMAN        7698 20-FEB-81                1600        300         30
+      7521 WARD       SALESMAN        7698 22-FEB-81                1250        500         30
+      7566 JONES      MANAGER         7839 02-APR-81                2975                    20
+      7654 MARTIN     SALESMAN        7698 28-SEP-81                1250       1400         30
+      7698 BLAKE      MANAGER         7839 01-MAY-81                2850                    30
+      7782 CLARK      MANAGER         7839 09-JUN-81                2450                    10
+      7788 SCOTT      ANALYST         7566 19-APR-87                3000                    20
+      7839 KING       PRESIDENT            17-NOV-81                5000                    10
+      7844 TURNER     SALESMAN        7698 08-SEP-81                1500          0         30
+      7876 ADAMS      CLERK           7788 23-MAY-87                1100                    20
+      7900 JAMES      CLERK           7698 03-DEC-81                 950                    30
+      7902 FORD       ANALYST         7566 03-DEC-81                3000                    20
+      7934 MILLER     CLERK           7782 23-JAN-82                1300                    10
+
+14 rows selected.
+
+SQL> 
+
+-- PPAS数据库
+ppasdb=# select * from emp;
+ empno | ename  |    job    | mgr  |      hiredate      |   sal   |  comm   | deptno 
+-------+--------+-----------+------+--------------------+---------+---------+--------
+  7369 | SMITH  | CLERK     | 7902 | 17-DEC-80 00:00:00 |  800.00 |         |     20
+  7499 | ALLEN  | SALESMAN  | 7698 | 20-FEB-81 00:00:00 | 1600.00 |  300.00 |     30
+  7521 | WARD   | SALESMAN  | 7698 | 22-FEB-81 00:00:00 | 1250.00 |  500.00 |     30
+  7566 | JONES  | MANAGER   | 7839 | 02-APR-81 00:00:00 | 2975.00 |         |     20
+  7654 | MARTIN | SALESMAN  | 7698 | 28-SEP-81 00:00:00 | 1250.00 | 1400.00 |     30
+  7698 | BLAKE  | MANAGER   | 7839 | 01-MAY-81 00:00:00 | 2850.00 |         |     30
+  7782 | CLARK  | MANAGER   | 7839 | 09-JUN-81 00:00:00 | 2450.00 |         |     10
+  7788 | SCOTT  | ANALYST   | 7566 | 19-APR-87 00:00:00 | 3000.00 |         |     20
+  7839 | KING   | PRESIDENT |      | 17-NOV-81 00:00:00 | 5000.00 |         |     10
+  7844 | TURNER | SALESMAN  | 7698 | 08-SEP-81 00:00:00 | 1500.00 |    0.00 |     30
+  7876 | ADAMS  | CLERK     | 7788 | 23-MAY-87 00:00:00 | 1100.00 |         |     20
+  7900 | JAMES  | CLERK     | 7698 | 03-DEC-81 00:00:00 |  950.00 |         |     30
+  7902 | FORD   | ANALYST   | 7566 | 03-DEC-81 00:00:00 | 3000.00 |         |     20
+  7934 | MILLER | CLERK     | 7782 | 23-JAN-82 00:00:00 | 1300.00 |         |     10
+(14 rows)
+
+ppasdb=# 
+ppasdb=# 
+ppasdb=# CREATE TABLE emp_copy(LIKE emp);
+CREATE TABLE
+ppasdb=# 
+ppasdb=# DECLARE
+ppasdb-#     TYPE emp_tbl IS TABLE OF emp%ROWTYPE INDEX BY BINARY_INTEGER;
+ppasdb$#     t_emp emp_tbl;
+ppasdb$# BEGIN
+ppasdb$#     SELECT * FROM emp BULK COLLECT INTO t_emp;   -- 这边做下微调。
+ppasdb$#     FORALL i IN t_emp.FIRST .. t_emp.LAST
+ppasdb$# INSERT INTO emp_copy VALUES t_emp(i);
+ppasdb$# END;
+
+EDB-SPL Procedure successfully completed
+ppasdb=# select * from emp_copy;
+ empno | ename  |    job    | mgr  |      hiredate      |   sal   |  comm   | deptno 
+-------+--------+-----------+------+--------------------+---------+---------+--------
+  7369 | SMITH  | CLERK     | 7902 | 17-DEC-80 00:00:00 |  800.00 |         |     20
+  7499 | ALLEN  | SALESMAN  | 7698 | 20-FEB-81 00:00:00 | 1600.00 |  300.00 |     30
+  7521 | WARD   | SALESMAN  | 7698 | 22-FEB-81 00:00:00 | 1250.00 |  500.00 |     30
+  7566 | JONES  | MANAGER   | 7839 | 02-APR-81 00:00:00 | 2975.00 |         |     20
+  7654 | MARTIN | SALESMAN  | 7698 | 28-SEP-81 00:00:00 | 1250.00 | 1400.00 |     30
+  7698 | BLAKE  | MANAGER   | 7839 | 01-MAY-81 00:00:00 | 2850.00 |         |     30
+  7782 | CLARK  | MANAGER   | 7839 | 09-JUN-81 00:00:00 | 2450.00 |         |     10
+  7788 | SCOTT  | ANALYST   | 7566 | 19-APR-87 00:00:00 | 3000.00 |         |     20
+  7839 | KING   | PRESIDENT |      | 17-NOV-81 00:00:00 | 5000.00 |         |     10
+  7844 | TURNER | SALESMAN  | 7698 | 08-SEP-81 00:00:00 | 1500.00 |    0.00 |     30
+  7876 | ADAMS  | CLERK     | 7788 | 23-MAY-87 00:00:00 | 1100.00 |         |     20
+  7900 | JAMES  | CLERK     | 7698 | 03-DEC-81 00:00:00 |  950.00 |         |     30
+  7902 | FORD   | ANALYST   | 7566 | 03-DEC-81 00:00:00 | 3000.00 |         |     20
+  7934 | MILLER | CLERK     | 7782 | 23-JAN-82 00:00:00 | 1300.00 |         |     10
+(14 rows)
+
+ppasdb=# 
+```
 
 2.**FORALL index IN INDICES OF collection dmlstatement; 形式**
 
