--- a/ppas/20190226/20190226_02.md
+++ b/ppas/20190226/20190226_02.md
@@ -149,9 +149,11 @@ ppasdb=#
 
 2.**FORALL index IN INDICES OF collection dmlstatement; 形式**
 
+暂时不支持，需结合具体业务逻辑进行修改
 
 3.**FORALL index IN VALUES OF index_collection dmlstatement; 形式**
 
+暂时不支持，需结合具体业务逻辑进行修改
 
 
 ### 三、参考链接
