--- a/ppas/20190226/20190226_03.md
+++ b/ppas/20190226/20190226_03.md
@@ -2,6 +2,11 @@
 ---
 
 ### 一、背景介绍
+ASCII码中0作为特殊字符保留，表示字符串结束。不能将 ORACLE 里面的空字符串与 C语言里面的空字符串相混淆。C里面的空字符串并非不包含任何数据，里面包含了一个字符串结束符\0。C 语言中的空字符串 对应 Oracle 中 ASCII 表中的0值，即 CHR(0)。
+**CHR(0) 和 CHR(32) 不是一回事**
+1. 空格：CHR(32)，在显示器、打印机或其他输出设备上移动一格。
+2. 空字符：CHR(0)，表示没有字符，即不输出任何东西到显示器、打印机或其他输出设备。
+
 
 ### 二、转换规则
 
