--- a/ppas/20190226/20190226_03.md
+++ b/ppas/20190226/20190226_03.md
@@ -7,6 +7,20 @@ ASCII码中0作为特殊字符保留，表示字符串结束。不能将 ORACLE 
 1. 空格：CHR(32)，在显示器、打印机或其他输出设备上移动一格。
 2. 空字符：CHR(0)，表示没有字符，即不输出任何东西到显示器、打印机或其他输出设备。
 
+但 CHR(0)是一个确定的值，它显然不是 NULL。
+```
+SQL> SELECT * FROM DUAL WHERE CHR(0) IS NULL;
+
+no rows selected
+
+SQL> 
+SQL> select nvl(chr(0), 'test') from dual; 
+
+N
+-
+
+SQL> 
+```
 
 ### 二、转换规则
 
