--- a/ppas/20190226/20190226_03.md
+++ b/ppas/20190226/20190226_03.md
@@ -23,6 +23,41 @@ SQL>
 ```
 
 ### 二、转换规则
+1. **如果CHR(0)是为了实现空格分割的效果，可以考虑修改为 CHR(32)**
+
+```
+SQL> create table tab_chr(f varchar2(20));
+
+Table created.
+
+SQL> insert into tab_chr select 'a'||chr(32)||'b' from dual;
+
+1 row created.
+
+SQL> insert into tab_chr select 'a'||chr(0)||'b' from dual;
+
+1 row created.
+
+SQL> commit;
+
+Commit complete.
+
+SQL> select * from tab_chr;
+
+F
+--------------------
+a b
+a b
+
+SQL> select f,dump(f) from tab_chr;
+
+F                    DUMP(F)
+-------------------- ----------------------------------------
+a b                  Typ=1 Len=3: 97,32,98    -- 32 表示空格
+a b                  Typ=1 Len=3: 97,0,98     -- 0  表示无字符
+
+SQL> 
+```
 
 ### 三、参考链接
 1. [http://www.10tiao.com/html/188/201609/2650271565/1.html](http://www.10tiao.com/html/188/201609/2650271565/1.html)
