--- a/ppas/20190226/20190226_03.md
+++ b/ppas/20190226/20190226_03.md
@@ -21,6 +21,12 @@ N
 
 SQL> 
 ```
+**PPAS/PG 不支持空字符输入:**
+```
+ppasdb=# select 'a'||chr(0)||'b' from dual;
+错误:  不允许使用空字符
+ppasdb=# 
+```
 
 ### 二、转换规则
 1. **如果CHR(0)是为了实现空格分割的效果，可以考虑修改为 CHR(32)**
@@ -58,6 +64,8 @@ a b                  Typ=1 Len=3: 97,0,98     -- 0  表示无字符
 
 SQL> 
 ```
+
+
 
 ### 三、参考链接
 1. [http://www.10tiao.com/html/188/201609/2650271565/1.html](http://www.10tiao.com/html/188/201609/2650271565/1.html)
