--- a/ppas/20190226/20190226_03.md
+++ b/ppas/20190226/20190226_03.md
@@ -56,6 +56,10 @@ F
 a b
 a b
 
+SQL> select 1 from dual where chr(0)=chr(32);  -- chr(32) 和 chr(0) 不相等。
+
+no rows selected
+
 SQL> select f,dump(f) from tab_chr;
 
 F                    DUMP(F)
