--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -5,12 +5,24 @@
 
 1.**Oracle VARRAY 集合**
 
-一个 varray 或者 variable-size 数组是一种值关联正整数的集合类型。在很多方面类似于嵌套表（nested）。主要有以下特性：
-
 
 
 
 2.**PPAS VARRAY 集合**
+
+一个 varray 或者 variable-size 数组是一种值关联正整数的集合类型。在很多方面类似于嵌套表（nested）。主要有以下特性：
+
++ varray类型定义必须设置一个最大长度限制，然后可以定义类型变量varray variables。
++ 当varray variables定义后，初始化是一个null集合，null可变数组必须使用constructor进行初始化。
++ 键是正整数。
++ EXTEND 方法可以增大预定义的长度限制。
++ 和嵌套表nested不同，varray不能被稀疏，没有gaps。
++ 超过长度限制，会抛SUBSCRIPT_BEYOND_COUNT 或者 SUBSCRIPT_OUTSIDE_LIMIT 异常。
+
+基本语法如下：
+```
+TYPE varraytype IS { VARRAY | VARYING ARRAY }(maxsize) OF { datatype | objtype };
+```
 
 
 
