--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -22,6 +22,10 @@
 基本语法如下：
 ```
 TYPE varraytype IS { VARRAY | VARYING ARRAY }(maxsize) OF { datatype | objtype };
+varray varraytype [:= varraytype ([ { expr1 | NULL } [, { expr2 | NULL } ] [, ...] ])] ;
+
+-- datatype:指内置的标量数据类型，如：VARCHAR2、NUMBER
+-- objtype:预先定义的对象类型
 ```
 
 
