--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -5,8 +5,13 @@
 
 1.**Oracle VARRAY 集合**
 
+PL/SQL 数组数据类型，可作为表列数据类型使用。该数据类型与高级语言数组类似，元素下标从1开始，并且元素最大个数有限。当使用VARRAY是，应首先进行初始化。
 
-
+基本语法如下：
+```
+TYPE type_name IS VARRAY(size) OF element_type [NOT NULL]
+indentifier type_name;
+```
 
 2.**PPAS VARRAY 集合**
 
