--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -8,10 +8,11 @@
 PL/SQL 数组数据类型，可作为表列数据类型使用。该数据类型与高级语言数组类似，元素下标从1开始，并且元素最大个数有限。当使用VARRAY是，应首先进行初始化。
 
 基本语法如下：
-```
-TYPE type_name IS VARRAY(size) OF element_type [NOT NULL]
-indentifier type_name;
-```
+![collection_type_definition](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/collection_type_def.gif)
+
+![varray_type_def](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/varray_type_def.gif)
+
+![element_type](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/element_type_definition.gif)
 
 2.**PPAS VARRAY 集合**
 
@@ -39,3 +40,4 @@ varray varraytype [:= varraytype ([ { expr1 | NULL } [, { expr2 | NULL } ] [, ..
 
 ### 三、参考链接
 1.[https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.147.html](https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.147.html)
+2.[https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/collection.htm#LNPLS01307](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/collection.htm#LNPLS01307)
