--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -8,11 +8,16 @@
 PL/SQL 数组数据类型，可作为表列数据类型使用。该数据类型与高级语言数组类似，元素下标从1开始，并且元素最大个数有限。当使用VARRAY是，应首先进行初始化。
 
 基本语法如下：
+
+**collection_type_definition: **
 ![collection_type_definition](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/collection_type_def.gif)
 
+**varray_type_def: **
 ![varray_type_def](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/varray_type_def.gif)
 
+***element_type: **
 ![element_type](https://docs.oracle.com/cd/B28359_01/appdev.111/b28370/img/element_type_definition.gif)
+
 
 2.**PPAS VARRAY 集合**
 
