--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -45,6 +45,14 @@ varray varraytype [:= varraytype ([ { expr1 | NULL } [, { expr2 | NULL } ] [, ..
 
 
 ### 二、转换规则
+1.多集VARRAY
+```
+-- 1. Oracle数据库
+
+
+-- 2. PPAS数据库
+
+```
 
 ### 三、参考链接
 1.[https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.147.html](https://www.enterprisedb.com/docs/en/9.2/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.147.html)
