--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -45,10 +45,48 @@ varray varraytype [:= varraytype ([ { expr1 | NULL } [, { expr2 | NULL } ] [, ..
 
 
 ### 二、转换规则
-1.多集VARRAY
+1.多集VARRAY（以二维数组为例）
 ```
 -- 1. Oracle数据库
+SQL> set serveroutput on
+SQL> 
+SQL> 
+SQL> DECLARE
+  2      -- 定义一维VARRAY
+  3      TYPE varray_type IS VARRAY(10) OF INT;
+  4      -- 定义二维VARRAY
+  5      TYPE varray_varray_type IS VARRAY(10) OF varray_type;
+  6  
+  7      -- 初始化二维集合变量
+  8      var_array varray_varray_type := varray_varray_type(
+  9          varray_type(58,100,12),
+ 10          varray_type(432,43,211),
+ 11          varray_type(2,4)
+ 12      );
+ 13  
+ 14  BEGIN
+ 15      dbms_output.put_line('显示二维数组所有元素');
+ 16  
+ 17      FOR i in 1..var_array.COUNT LOOP
+ 18          FOR j in 1..var_array(i).COUNT LOOP
+ 19              dbms_output.put_line('var_array('||i||','||j||')='||var_array(i)(j));
+ 20          END LOOP;
+ 21      END LOOP;
+ 22  END;
+ 23  /
+显示二维数组所有元素
+var_array(1,1)=58
+var_array(1,2)=100
+var_array(1,3)=12
+var_array(2,1)=432
+var_array(2,2)=43
+var_array(2,3)=211
+var_array(3,1)=2
+var_array(3,2)=4
 
+PL/SQL procedure successfully completed.
+
+SQL> 
 
 -- 2. PPAS数据库
 
