--- a/ppas/20190227/20190227_01.md
+++ b/ppas/20190227/20190227_01.md
@@ -89,6 +89,40 @@ PL/SQL procedure successfully completed.
 SQL> 
 
 -- 2. PPAS数据库
+edb=# -- 在SPL使用二维数组
+edb=# -- 定义ARRAY(10,10)
+edb=# DECLARE
+edb-#     -- 定义二维数组 以及初始化变量
+edb-#     var_array INT[10][10] := ARRAY[
+edb$#         [58,100,12,NULL,NULL,NULL,NULL,NULL,NULL,NULL],
+edb$#         [432,43,211,NULL,NULL,NULL,NULL,NULL,NULL,NULL],
+edb$#         [2,4,NULL,NULL,NULL,NULL,NULL,NULL,NULL,NULL]
+edb$#     ];
+edb$# 
+edb$# BEGIN
+edb$#     dbms_output.put_line('显示二维数组所有元素');
+edb$#     
+edb$#     FOR i in 1..10 LOOP
+edb$#         FOR j in 1..10 LOOP
+edb$#             IF var_array[i][j] IS NOT NULL THEN
+edb$#                 dbms_output.put_line('var_array['||i||','||j||']='||var_array[i][j]);
+edb$#             END IF;
+edb$#         END LOOP;
+edb$#     END LOOP; 
+edb$# 
+edb$# END;
+显示二维数组所有元素
+var_array[1,1]=58
+var_array[1,2]=100
+var_array[1,3]=12
+var_array[2,1]=432
+var_array[2,2]=43
+var_array[2,3]=211
+var_array[3,1]=2
+var_array[3,2]=4
+
+EDB-SPL Procedure successfully completed
+edb=# 
 
 ```
 
