--- a/ppas/20190227/20190227_02.md
+++ b/ppas/20190227/20190227_02.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、背景介绍
-DBMS_APPLICATION_INFO 应用开发包允许应用程序向视图v$session,v$session_longops添加统计信息用于追踪程序执行情况，定位性能问题。
+DBMS_APPLICATION_INFO 应用开发包允许应用程序向视图v$session,v$session_longops添加统计信息用于追踪程序执行情况，定位特定module的性能问题。
 
 
 
