--- a/ppas/20190227/20190227_02.md
+++ b/ppas/20190227/20190227_02.md
@@ -4,12 +4,12 @@
 ### 一、背景介绍
 DBMS_APPLICATION_INFO 应用开发包允许应用程序向视图v$session,v$sqlarea,v$session_longops添加统计信息用于追踪程序执行情况，定位特定module的性能问题。涉及的 $ORACLE_HOME/rdbms/admin/dbmsapin.sql 脚本在数据库安装时就被安装上了。包含的主要子程序：
 
-+ READ_CLIENT_INFO 存储过程： 设置当前 session 的client_info 字段的值。
-+ READ_MODULE 存储过程：读取当前 session 的 module 和 action 字段值。
-+ SET_ACTION 存储过程：设置当前 module 的当前 action 名称。
-+ SET_CLIENT_INFO 存储过程：在 V$SESSION 设置 client_info 字段。
-+ SET_MODULE 存储过程：当前运行 module 名称。
-+ SET_SESSION_LONGOPS 存储过程：在 V$SESSION_LONGOPS 表中设置一行。
++ **READ_CLIENT_INFO 存储过程**： 设置当前 session 的client_info 字段的值。
++ **READ_MODULE 存储过程**：读取当前 session 的 module 和 action 字段值。
++ **SET_ACTION 存储过程**：设置当前 module 的当前 action 名称。
++ **SET_CLIENT_INFO 存储过程**：在 V$SESSION 设置 client_info 字段。
++ **SET_MODULE 存储过程**：当前运行 module 名称。
++ **SET_SESSION_LONGOPS 存储过程**：在 V$SESSION_LONGOPS 表中设置一行。
 
 ### 二、转换规则
 
