--- a/ppas/20190227/20190227_02.md
+++ b/ppas/20190227/20190227_02.md
@@ -48,6 +48,39 @@ set_session_longops_nohint constant BINARY_INTEGER := -1;
 ```
 
 ### 二、转换规则
+1. **Oracle数据库**
+```
+-- 这里以 SET_CLIENT_INFO 过程为例
+SQL> select distinct sid from v$mystat;
+
+       SID
+----------
+       487
+
+SQL> select module,action,client_info from v$session where sid=487;
+
+MODULE                                             ACTION                         CLIENT_INFO
+-------------------------------------------------- ------------------------------ ------------------------------
+sqlplus@studio-ora11g (TNS V1-V3)
+
+-- 设置连接会话的client_info 信息到v$session中进行记录
+
+SQL>  exec dbms_application_info.set_client_info('test client info');
+
+PL/SQL procedure successfully completed.
+
+SQL> select module,action,client_info from v$session where sid=487;
+
+MODULE                                             ACTION                         CLIENT_INFO
+-------------------------------------------------- ------------------------------ ------------------------------
+sqlplus@studio-ora11g (TNS V1-V3)                                                 test client info
+
+SQL> 
+```
+2.**PPAS数据库**
+```
+
+```
 
 ### 三、参考链接
 1.[http://www.dba86.com/docs/oracle/11.2/appdev.112/e40758/d_appinf.htm#ARPLS003](http://www.dba86.com/docs/oracle/11.2/appdev.112/e40758/d_appinf.htm#ARPLS003)
