--- a/ppas/20190227/20190227_02.md
+++ b/ppas/20190227/20190227_02.md
@@ -78,7 +78,29 @@ sqlplus@studio-ora11g (TNS V1-V3)                                               
 SQL> 
 ```
 2.**PPAS数据库**
+PPAS/PG存在 pg_stat_statements 插件
+
 ```
+-- 查询PPAS是否安装了pg_stat_statements插件
+edb=# select * from pg_extension where extname='pg_stat_statements';
+      extname       | extowner | extnamespace | extrelocatable | extversion | extconfig | extcondition 
+--------------------+----------+--------------+----------------+------------+-----------+--------------
+ pg_stat_statements |       10 |        16444 | t              | 1.5        |           | 
+(1 row)
+
+-- 1. 创建插件 pg_stat_statements
+edb=# create extension pg_stat_statements;
+CREATE EXTENSION
+edb=# 
+或者
+select rds_manage_extension('create','pg_stat_statements');  -- 云版本
+
++ 2. 删除插件 pg_stat_statements
+edb=# drop extension pg_stat_statements;
+DROP EXTENSION
+edb=# 
+或者
+select rds_manage_extension('drop','pg_stat_statements');  -- 云版本
 
 ```
 
