--- a/ppas/20190227/20190227_02.md
+++ b/ppas/20190227/20190227_02.md
@@ -78,25 +78,51 @@ sqlplus@studio-ora11g (TNS V1-V3)                                               
 SQL> 
 ```
 2.**PPAS数据库**
-
-PPAS/PG存在 pg_stat_statements 插件
-
+PPAS/PG可以使用 pg_stat_activity 视图 + 安装 pg_stat_statements 插件，来定位性能问题。
 ```
--- 查询PPAS是否安装了pg_stat_statements插件
+-- 1. 使用 pg_stat_activity 视图
+edb=# \d pg_stat_activity   
+                      View "pg_catalog.pg_stat_activity"
+      Column      |           Type           | Collation | Nullable | Default 
+------------------+--------------------------+-----------+----------+---------
+ datid            | oid                      |           |          | 
+ datname          | name                     |           |          | 
+ pid              | integer                  |           |          | 
+ usesysid         | oid                      |           |          | 
+ usename          | name                     |           |          | 
+ application_name | text                     |           |          | 
+ client_addr      | inet                     |           |          | 
+ client_hostname  | text                     |           |          | 
+ client_port      | integer                  |           |          | 
+ backend_start    | timestamp with time zone |           |          | 
+ xact_start       | timestamp with time zone |           |          | 
+ query_start      | timestamp with time zone |           |          | 
+ state_change     | timestamp with time zone |           |          | 
+ wait_event_type  | text                     |           |          | 
+ wait_event       | text                     |           |          | 
+ state            | text                     |           |          | 
+ backend_xid      | xid                      |           |          | 
+ backend_xmin     | xid                      |           |          | 
+ query            | text                     |           |          | 
+ backend_type     | text                     |           |          | 
+
+edb=# 
+
+-- 2. 查询PPAS是否安装了pg_stat_statements插件
 edb=# select * from pg_extension where extname='pg_stat_statements';
       extname       | extowner | extnamespace | extrelocatable | extversion | extconfig | extcondition 
 --------------------+----------+--------------+----------------+------------+-----------+--------------
  pg_stat_statements |       10 |        16444 | t              | 1.5        |           | 
 (1 row)
 
--- 1. 创建插件 pg_stat_statements
+-- a. 创建插件 pg_stat_statements
 edb=# create extension pg_stat_statements;
 CREATE EXTENSION
 edb=# 
 或者
 select rds_manage_extension('create','pg_stat_statements');  -- 云版本
 
-+ 2. 删除插件 pg_stat_statements
+-- b. 删除插件 pg_stat_statements
 edb=# drop extension pg_stat_statements;
 DROP EXTENSION
 edb=# 
@@ -104,6 +130,7 @@ edb=#
 select rds_manage_extension('drop','pg_stat_statements');  -- 云版本
 
 ```
+**理论上：dbms_application_info.set_client_info 是可以删除的，如果一定要捕获，可以考虑通过审计来实现。**
 
 ### 三、参考链接
 1.[http://www.dba86.com/docs/oracle/11.2/appdev.112/e40758/d_appinf.htm#ARPLS003](http://www.dba86.com/docs/oracle/11.2/appdev.112/e40758/d_appinf.htm#ARPLS003)
