--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -2,7 +2,11 @@
 ---
 
 ### 一、背景介绍
+DBMS_UTILITY是Oracle提供的一个内置的实用包，包含许多实用的子程序。
+
 
 ### 二、转换规则
 
 ### 三、参考链接
+1.[https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm](https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm)
+2.[https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
