--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -2,9 +2,7 @@
 ---
 
 ### 一、背景介绍
-DBMS_UTILITY 是Oracle提供的一个内置的实用包，包含许多实用的子程序。PPAS也内置了一些功能，但是没有Oracle丰富，目前主要支持:
-
-[PPAS支持DBMS_UTILITY包程](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
+DBMS_UTILITY 是Oracle提供的一个内置的实用包，包含许多实用的子程序。PPAS也内置了一些功能，但是没有Oracle丰富，目前主要支持: [PPAS支持DBMS_UTILITY包程](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
 
 
 
