--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -4,10 +4,20 @@
 ### 一、背景介绍
 DBMS_UTILITY 是Oracle提供的一个内置的实用包，包含许多实用的子程序。PPAS也内置了一些功能，但是没有Oracle丰富，目前主要支持: [PPAS支持DBMS_UTILITY包z子程序](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
 
-
-
-
 ### 二、转换规则
+1. **Oracle数据库**
+```
+-- 这里以 DBMS_UTILITY.FORMAT_ERROR_STACK 为例
+
+
+
+```
+
+2. **PPAS数据库**
+```
+
+```
+
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm](https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm)
