--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -1,13 +1,18 @@
-## Oracle PPAS 兼容性分析 之  DBMS_UTILITY包（如：FORMAT_ERROR_STACK 过程）
+## Oracle PPAS 兼容性分析 之  DBMS_UTILITY包（如：FORMAT_ERROR_STACK 函数）
 ---
 
 ### 一、背景介绍
 DBMS_UTILITY 是Oracle提供的一个内置的实用包，包含许多实用的子程序。PPAS也内置了一些功能，但是没有Oracle丰富，目前主要支持: [PPAS支持DBMS_UTILITY包子程序](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
 
+**这里以 DBMS_UTILITY.FORMAT_ERROR_STACK 为例（PPAS暂不支持此函数）：**
+```
+DBMS_UTILITY.FORMAT_ERROR_STACK 
+  RETURN VARCHAR2;
+```
+
 ### 二、转换规则
 1. **Oracle数据库**
 ```
--- 这里以 DBMS_UTILITY.FORMAT_ERROR_STACK 为例
 
 
 
