--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -4,6 +4,10 @@
 ### 一、背景介绍
 DBMS_UTILITY 是Oracle提供的一个内置的实用包，包含许多实用的子程序。PPAS也内置了一些功能，但是没有Oracle丰富，目前主要支持: [PPAS支持DBMS_UTILITY包子程序](https://www.enterprisedb.com/docs/en/9.4/oracompat/Database_Compatibility_for_Oracle_Developers_Guide.1.190.html)
 
++ 当你在PL/SQL程序中执行SQL语句时，Oracle可能抛出NO_DATA_FOUND, TOO_MANY_ROWS或DUP_VAL_ON_INDEX。如果你在这些异常被抛出的同一个块中处理它们，那么DBMS_UTILITY.FORMAT_ERROR_STACK所返回的错误信息总是和如下对SQLERRM的调用所返回的错误信息一样：SQLERRM()
++ 在任何情况下，DBMS_UTILITY.FORMAT_ERROR_STACK返回的字符串长度比SQLERRM所返回的更长。
++ SQLERRM函数能被用来查找一个特定错误代码所对应的错误信息，而DBMS_UTILITY.FORMAT_ERROR_STACK只是返回你当前会话的错误堆栈。
+
 **这里以 DBMS_UTILITY.FORMAT_ERROR_STACK 为例（PPAS暂不支持此函数）：**
 ```
 -- DBMS_UTILITY.FORMAT_ERROR_STACK 这个内置函数和SQLERRM一样，返回的是和当前错误（SQLCODE返回的值）所关联的错误信息。
