--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -17,16 +17,44 @@ DBMS_UTILITY.FORMAT_ERROR_STACK
 ### 二、转换规则
 1. **Oracle数据库**
 ```
+SQL> BEGIN
+  2    RAISE_APPLICATION_ERROR(-20000, 'This is an error example');
+  3  EXCEPTION
+  4    WHEN OTHERS THEN 
+  5      -- 1. DBMS_UTILITY.FORMAT_ERROR_STACK
+  6      DBMS_OUTPUT.PUT(DBMS_UTILITY.FORMAT_ERROR_STACK);
+  7      -- 2. SQLERRM
+  8      DBMS_OUTPUT.PUT(SQLERRM);  
+  9      DBMS_OUTPUT.PUT_LINE('');
+ 10  END;
+ 11  /
+ORA-20000: This is an error example
+ORA-20000: This is an error example
 
+PL/SQL procedure successfully completed.
 
-
+SQL> 
 ```
 
 2. **PPAS数据库**
 ```
+edb=# 
+edb=# BEGIN
+edb$#   RAISE_APPLICATION_ERROR(-20000, 'This is an error example');
+edb$# EXCEPTION
+edb$#   WHEN OTHERS THEN 
+edb$#     -- SQLERRM 
+edb$#     DBMS_OUTPUT.PUT(SQLERRM);  
+edb$#     DBMS_OUTPUT.PUT_LINE('');
+edb$# END;
+EDB-20000: This is an error example
+
+EDB-SPL Procedure successfully completed
+edb=# 
 
 ```
 
+**注意：可以 DBMS_UTILITY.FORMAT_ERROR_STACK ===> SQLERRM  进行转换。**
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm](https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm)
