--- a/ppas/20190227/20190227_03.md
+++ b/ppas/20190227/20190227_03.md
@@ -54,7 +54,9 @@ edb=#
 
 ```
 
-**注意：可以 DBMS_UTILITY.FORMAT_ERROR_STACK ===> SQLERRM  进行转换。**
+**注意：在错误信息不要求全面情况下：可以 DBMS_UTILITY.FORMAT_ERROR_STACK ===> SQLERRM  进行转换。**
++ SQLERRM：默认只保留 512 bytes的信息，其他的会被截断。返回的只指定SQLCODE的错误信息（Oracle 12.1 and 12.2+ 开始二者行为一致了）。
++ DBMS_UTILITY.FORMAT_ERROR_STACK：返回所有信息，不会截断，信息更全面。
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm](https://docs.oracle.com/cd/E18283_01/appdev.112/e16760/d_util.htm)
