--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -5,15 +5,17 @@
 
 **Oracle基本语法如下:**
 ```
-CREATE OR REPLACE FUNCTION schema.function_name(params_declaration) RETURN datatype
-    PARALLEL_ENABLE AGGREGATE USING schema.implementation_type;
+CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN datatype
+    PARALLEL_ENABLE AGGREGATE USING schema.implementation_type 
+    
 -- 其中的implementation_type是：User-Defined Aggregate Functions（ADT）用户自定义聚合函数。
 ```
 
 **PPAS/PG基本语法:**
 ```
 CREATE [ OR REPLACE ] FUNCTION  name (argname) RETURNS rettype
-  PARALLEL { UNSAFE | RESTRICTED | SAFE } 
+  PARALLEL { UNSAFE | RESTRICTED | SAFE }
+  
 ```
 
 ### 二、转换规则
