--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -19,5 +19,6 @@ CREATE [ OR REPLACE ] FUNCTION  name (argname) RETURNS rettype
 ```
 
 ### 二、转换规则
++ PARALLEL_ENABLE 可以直接转换为 PARALLEL SAFE。
 
 ### 三、参考链接
