--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -8,7 +8,8 @@
 CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN datatype
     PARALLEL_ENABLE AGGREGATE USING schema.implementation_type 
     
--- 其中的implementation_type是：User-Defined Aggregate Functions（ADT）用户自定义聚合函数。
+-- 其中的implementation_type：必须是User-Defined Aggregate Functions（ADT）用户自定义聚合函数，而且要包含ODCIAggregate子程序的实现。
+-- AGGREGATE USING 语法限制：函数尤其只能指定一个输入参数。
 ```
 
 **PPAS/PG基本语法:**
