--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -3,7 +3,7 @@
 
 ### 一、背景介绍
 
-**Oracle基本语法如下:**
+**1. Oracle基本语法如下:**
 ```
 CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN datatype
     PARALLEL_ENABLE AGGREGATE USING schema.implementation_type 
@@ -11,13 +11,19 @@ CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN d
 -- 其中的implementation_type：必须是User-Defined Aggregate Functions（ADT）用户自定义聚合函数，而且要包含ODCIAggregate子程序的实现。
 -- AGGREGATE USING 语法限制：函数尤其只能指定一个输入参数。
 ```
+**ADT函数**
 
-**PPAS/PG基本语法:**
+
+
+**2. PPAS/PG基本语法:**
 ```
 CREATE [ OR REPLACE ] FUNCTION  name (argname) RETURNS rettype
   PARALLEL { UNSAFE | RESTRICTED | SAFE }
   
 ```
+**ADT函数**
+
+
 
 ### 二、转换规则
 + PARALLEL_ENABLE 可以直接转换为 PARALLEL SAFE。
