--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -12,6 +12,17 @@ CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN d
 -- AGGREGATE USING 语法限制：函数尤其只能指定一个输入参数。
 ```
 **ADT函数**
+需要通过ODCIAggregate接口进行实现，需要实现 4个 子程序，initialization, iteration, merging, 和 termination。
++ **initialization**：通过 ODCIAggregateInitialize() 程序实现，自定义聚集函数初始化设置,从这儿开始一个聚集函数。
+
++ **Iteration**：通过 ODCIAggregateIterate() 程序实现，忽略 NULL 值。自定义聚集函数,最主要的步骤,这个函数定义我们的聚集函数具体做什么操作,后面的例子,是取最大值,最小值,平均值,还是做连接操作.self 为当前聚集函数的指针,用来与前面的计算结果进行关联。
+
++ **merging**：通过 ODCIAggregateMerge() 程序实现，用来合并两个聚集函数的两个不同的指针对应的结果,用户合并不同结果结的数据,特别是处理并行(parallel)查询聚集函数的时候。
+
++ **termination**：通过 ODCIAggregateTerminate() 程序实现，终止聚集函数的处理,返回聚集函数处理的结果。
+
+
+
 
 
 
