--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -23,13 +23,65 @@ CREATE [ OR REPLACE ] FUNCTION schema.function_name(params_declaration) RETURN d
 
 ![PARALLEL_ENABLE并行处理](https://docs.oracle.com/cd/B28359_01/appdev.111/b28425/img/addci043.gif)
 
-**2. PPAS/PG基本语法:**
+**2. PPAS/PG关于ADT基本语法:**
 ```
-CREATE [ OR REPLACE ] FUNCTION  name (argname) RETURNS rettype
-  PARALLEL { UNSAFE | RESTRICTED | SAFE }
-  
+CREATE AGGREGATE name ( [ argmode ] [ argname ] arg_data_type [ , ... ] ) (
+    SFUNC = sfunc,
+    STYPE = state_data_type
+    [ , SSPACE = state_data_size ]
+    [ , FINALFUNC = ffunc ]
+    [ , FINALFUNC_EXTRA ]
+    [ , COMBINEFUNC = combinefunc ]
+    [ , SERIALFUNC = serialfunc ]
+    [ , DESERIALFUNC = deserialfunc ]
+    [ , INITCOND = initial_condition ]
+    [ , MSFUNC = msfunc ]
+    [ , MINVFUNC = minvfunc ]
+    [ , MSTYPE = mstate_data_type ]
+    [ , MSSPACE = mstate_data_size ]
+    [ , MFINALFUNC = mffunc ]
+    [ , MFINALFUNC_EXTRA ]
+    [ , MINITCOND = minitial_condition ]
+    [ , SORTOP = sort_operator ]
+    [ , PARALLEL = { SAFE | RESTRICTED | UNSAFE } ]   -- 支持并行
+)
+
+CREATE AGGREGATE name ( [ [ argmode ] [ argname ] arg_data_type [ , ... ] ]
+                        ORDER BY [ argmode ] [ argname ] arg_data_type [ , ... ] ) (
+    SFUNC = sfunc,
+    STYPE = state_data_type
+    [ , SSPACE = state_data_size ]
+    [ , FINALFUNC = ffunc ]
+    [ , FINALFUNC_EXTRA ]
+    [ , INITCOND = initial_condition ]
+    [ , PARALLEL = { SAFE | RESTRICTED | UNSAFE } ]
+    [ , HYPOTHETICAL ]
+)
+
+or the old syntax
+
+CREATE AGGREGATE name (
+    BASETYPE = base_type,
+    SFUNC = sfunc,
+    STYPE = state_data_type
+    [ , SSPACE = state_data_size ]
+    [ , FINALFUNC = ffunc ]
+    [ , FINALFUNC_EXTRA ]
+    [ , COMBINEFUNC = combinefunc ]
+    [ , SERIALFUNC = serialfunc ]
+    [ , DESERIALFUNC = deserialfunc ]
+    [ , INITCOND = initial_condition ]
+    [ , MSFUNC = msfunc ]
+    [ , MINVFUNC = minvfunc ]
+    [ , MSTYPE = mstate_data_type ]
+    [ , MSSPACE = mstate_data_size ]
+    [ , MFINALFUNC = mffunc ]
+    [ , MFINALFUNC_EXTRA ]
+    [ , MINITCOND = minitial_condition ]
+    [ , SORTOP = sort_operator ]
+)
+
 ```
-**ADT函数**
 
 
 
