--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -87,6 +87,16 @@ CREATE AGGREGATE name (
 
 ### 二、转换规则
 + PARALLEL_ENABLE 可以直接转换为 PARALLEL SAFE。
++ 转换时，需要结合具体业务逻辑进行，适当情况下，可以考虑PPAS/PG已经提供的聚合函数（如：string_agg等）进行替换。
+
+1. **Oracle数据库**
+```
+```
+
+
+2. **PPAS/PG数据库**
+```
+```
 
 ### 三、参考链接
 1.[https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_function.htm#CIHCAJAF](https://docs.oracle.com/cd/E11882_01/appdev.112/e25519/create_function.htm#CIHCAJAF)
