--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -91,6 +91,57 @@ CREATE AGGREGATE name (
 
 1. **Oracle数据库**
 ```
+-- 创建ADT函数
+-- 1. 创建TYPE
+CREATE OR REPLACE TYPE OOMDB.STRCAT_TYPE AS OBJECT (
+    cat_string varchar2(4000), 
+    STATIC FUNCTION ODCIAggregateInitialize (cs_ctx IN OUT strcat_type) RETURN number, 
+    MEMBER FUNCTION ODCIAggregateIterate (self IN OUT strcat_type, value IN varchar2) RETURN number, 
+    MEMBER FUNCTION ODCIAggregateMerge (self IN OUT strcat_type, ctx2 IN OUT strcat_type) RETURN number, 
+    MEMBER FUNCTION ODCIAggregateTerminate (self IN OUT strcat_type, returnValue OUT varchar2, flags IN number) RETURN number
+);
+/
+
+-- 2. 创建TYPE BODY，具体实现
+CREATE OR REPLACE TYPE BODY OOMDB.STRCAT_TYPE IS
+    STATIC FUNCTION ODCIAggregateInitialize (cs_ctx IN OUT strcat_type) RETURN number
+    IS
+    BEGIN
+        cs_ctx := strcat_type(NULL);
+        RETURN ODCIConst.Success;
+    END;
+    MEMBER FUNCTION ODCIAggregateIterate (self IN OUT strcat_type, value IN varchar2) RETURN number
+    IS
+    BEGIN
+        self.cat_string := self.cat_string || chr(10) || value;
+        RETURN ODCIConst.Success;
+    END;
+    MEMBER FUNCTION ODCIAggregateTerminate (self IN OUT strcat_type, returnValue OUT varchar2, flags IN number) RETURN number
+    IS
+    BEGIN
+        returnValue := ltrim(rtrim(self.cat_string, chr(10)), chr(10));
+        RETURN ODCIConst.Success;
+    END;
+    MEMBER FUNCTION ODCIAggregateMerge (self IN OUT strcat_type, ctx2 IN OUT strcat_type) RETURN number
+    IS
+    BEGIN
+        self.cat_string := self.cat_string || chr(10) || ctx2.cat_string;
+        RETURN ODCIConst.Success;
+    END;
+END;
+/
+
+-- 3. 自定义聚合函数
+CREATE OR REPLACE FUNCTION OOMDB.STRCAT (
+    input varchar2
+)
+RETURN varchar2
+PARALLEL_ENABLE
+AGGREGATE
+USING strcat_type;
+/
+-- 4. 测试
+
 ```
 
 
