--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -141,7 +141,54 @@ AGGREGATE
 USING strcat_type;
 /
 -- 4. 测试
+SQL> select e.deptno,OOMDB.STRCAT(e.sal) as sum_sal from scott.emp e group by e.deptno;
 
+    DEPTNO SUM_SAL
+---------- ----------------------------------------
+        10 2450
+           1300
+           5000
+
+        20 800
+           3000
+           1100
+           3000
+           2975
+
+        30 1600
+           950
+           1500
+           2850
+           1250
+           1250
+
+
+SQL> 
+SQL> select e.deptno,e.job,OOMDB.STRCAT(e.sal) as sum_sal from scott.emp e group by e.deptno,e.job;
+
+    DEPTNO JOB       SUM_SAL
+---------- --------- ----------------------------------------
+        10 CLERK     1300
+        10 MANAGER   2450
+        10 PRESIDENT 5000
+        20 CLERK     800
+                     1100
+
+        20 ANALYST   3000
+                     3000
+
+        20 MANAGER   2975
+        30 CLERK     950
+        30 MANAGER   2850
+        30 SALESMAN  1600
+                     1500
+                     1250
+                     1250
+
+
+9 rows selected.
+
+SQL> 
 ```
 
 
