--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -91,6 +91,7 @@ CREATE AGGREGATE name (
 
 1. **Oracle数据库**
 ```
+-- 案例1：字符串拼接
 -- 创建ADT函数
 -- 1. 创建TYPE
 CREATE OR REPLACE TYPE OOMDB.STRCAT_TYPE AS OBJECT (
@@ -189,11 +190,93 @@ SQL> select e.deptno,e.job,OOMDB.STRCAT(e.sal) as sum_sal from scott.emp e group
 9 rows selected.
 
 SQL> 
+
+-- 案例2：分组聚合，按照逗号连接，遇到NULL，自动过滤掉
+CREATE OR REPLACE TYPE OOMDB.WM_CONCAT_TYPE AUTHID CURRENT_USER AS OBJECT (
+	CURR_STR VARCHAR2(32767), 
+	STATIC FUNCTION ODCIAGGREGATEINITIALIZE (SCTX IN OUT wm_concat_type) RETURN NUMBER, 
+	MEMBER FUNCTION ODCIAGGREGATEITERATE (SELF IN OUT wm_concat_type, P1 IN VARCHAR2) RETURN NUMBER, 
+	MEMBER FUNCTION ODCIAGGREGATETERMINATE (SELF IN wm_concat_type, RETURNVALUE OUT VARCHAR2, FLAGS IN NUMBER) RETURN NUMBER, 
+	MEMBER FUNCTION ODCIAGGREGATEMERGE (SELF IN OUT wm_concat_type, SCTX2 IN wm_concat_type) RETURN NUMBER
+);
+/
+
+CREATE OR REPLACE TYPE BODY OOMDB.WM_CONCAT_TYPE IS
+	STATIC FUNCTION ODCIAGGREGATEINITIALIZE (SCTX IN OUT wm_concat_type) RETURN NUMBER
+	IS
+	BEGIN
+		SCTX := wm_concat_type(NULL);
+		RETURN ODCICONST.SUCCESS;
+	END;
+	MEMBER FUNCTION ODCIAGGREGATEITERATE (SELF IN OUT wm_concat_type, P1 IN VARCHAR2) RETURN NUMBER
+	IS
+	BEGIN
+		IF CURR_STR IS NOT NULL THEN
+			CURR_STR := CURR_STR || ',' || P1;
+		ELSE
+			CURR_STR := P1;
+		END IF;
+		RETURN ODCICONST.SUCCESS;
+	END;
+	MEMBER FUNCTION ODCIAGGREGATETERMINATE (SELF IN wm_concat_type, RETURNVALUE OUT VARCHAR2, FLAGS IN NUMBER) RETURN NUMBER
+	IS
+	BEGIN
+		RETURNVALUE := CURR_STR;
+		RETURN ODCICONST.SUCCESS;
+	END;
+	MEMBER FUNCTION ODCIAGGREGATEMERGE (SELF IN OUT wm_concat_type, SCTX2 IN wm_concat_type) RETURN NUMBER
+	IS
+	BEGIN
+		IF SCTX2.CURR_STR IS NOT NULL THEN
+			SELF.CURR_STR := SELF.CURR_STR || ',' || SCTX2.CURR_STR;
+		END IF;
+		RETURN ODCICONST.SUCCESS;
+	END;
+END;
+/
+
+CREATE OR REPLACE FUNCTION OOMDB.WM_CONCAT (
+	P1 VARCHAR2
+)
+RETURN VARCHAR2
+AGGREGATE
+USING wm_concat_type;
+/
+
+SQL> select e.deptno,OOMDB.WM_CONCAT(e.comm) as sum_sal from scott.emp e group by e.deptno;
+
+    DEPTNO SUM_SAL
+---------- ----------------------------------------
+        10
+        20
+        30 300,0,1400,500
+
+SQL> 
+SQL> select OOMDB.WM_CONCAT(e.sal) as sum_sal from scott.emp e;
+
+SUM_SAL
+----------------------------------------
+800,1600,1250,2975,1250,2850,2450,3000,5
+000,1500,1100,950,3000,1300
+
+
+SQL> select OOMDB.WM_CONCAT(e.comm) as sum_sal from scott.emp e;
+
+SUM_SAL
+----------------------------------------
+300,500,1400,0
+
+SQL> 
+
 ```
 
 
 2. **PPAS/PG数据库**
 ```
+-- 案例1：
+
+-- 案例2：
+
 ```
 
 ### 三、参考链接
