--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -275,8 +275,32 @@ SQL>
 ```
 -- 案例1：
 
--- 案例2：
+-- 案例2：可以使用 string_agg 聚合函数代替
+edb=# select deptno,string_agg(comm,',') as sum_sal from emp e group by deptno;
+ deptno |          sum_sal           
+--------+----------------------------
+     10 | 
+     30 | 300.00,500.00,1400.00,0.00
+     20 | 
+(3 rows)
 
+edb=# 
+
+edb=# select string_agg(sal,',') as sum_sal from emp e;
+                                                    sum_sal                                                    
+---------------------------------------------------------------------------------------------------------------
+ 800.00,1600.00,1250.00,2975.00,1250.00,2850.00,2450.00,3000.00,5000.00,1500.00,1100.00,950.00,3000.00,1300.00
+(1 row)
+
+edb=#
+
+edb=# select string_agg(comm,',') as sum_sal from emp e;
+          sum_sal           
+----------------------------
+ 300.00,500.00,1400.00,0.00
+(1 row)
+
+edb=#
 ```
 
 ### 三、参考链接
