--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -275,7 +275,40 @@ SQL>
 ```
 -- 案例1：
 
--- 案例2：可以使用 string_agg 聚合函数代替
+-- 案例2：
+-- a. 方法1：自定义聚合函数
+edb=# CREATE AGGREGATE group_concat(anyelement)
+edb-# (
+edb(#     sfunc = array_append,    
+edb(#     stype = anyarray,      
+edb(#     initcond = '{}'      
+edb(# );
+CREATE AGGREGATE
+edb=# 
+edb=# 
+edb=# select array_to_string(group_concat(comm),','::text) as sum_sal from emp e;
+          sum_sal           
+----------------------------
+ 300.00,500.00,1400.00,0.00
+(1 row)
+
+edb=# select array_to_string(group_concat(sal),','::text) as sum_sal from emp e;
+                                                    sum_sal                                                    
+---------------------------------------------------------------------------------------------------------------
+ 800.00,1600.00,1250.00,2975.00,1250.00,2850.00,2450.00,3000.00,5000.00,1500.00,1100.00,950.00,3000.00,1300.00
+(1 row)
+
+edb=# select deptno,array_to_string(group_concat(comm),','::text) as sum_sal from emp e group by deptno;
+ deptno |          sum_sal           
+--------+----------------------------
+     10 | 
+     30 | 300.00,500.00,1400.00,0.00
+     20 | 
+(3 rows)
+
+edb=# 
+
+-- b. 可以使用 string_agg 聚合函数代替
 edb=# select deptno,string_agg(comm,',') as sum_sal from emp e group by deptno;
  deptno |          sum_sal           
 --------+----------------------------
