--- a/ppas/20190228/20190228_01.md
+++ b/ppas/20190228/20190228_01.md
@@ -308,7 +308,7 @@ edb=# select deptno,array_to_string(group_concat(comm),','::text) as sum_sal fro
 
 edb=# 
 
--- b. 可以使用 string_agg 聚合函数代替
+-- b. 方法2：使用 string_agg 聚合函数
 edb=# select deptno,string_agg(comm,',') as sum_sal from emp e group by deptno;
  deptno |          sum_sal           
 --------+----------------------------
