--- a/ppas/20180305/20180305_01.md
+++ b/ppas/20180305/20180305_01.md
@@ -2,7 +2,7 @@
 ---
 
 ### 一、背景介绍
-
+Subpartition Template 是建立一个子分区的模板，在添加分区时不必指定子分区，会自动根据模板创建子分区，简化了字分区的维护性。
 
 ### 二、转换规则
 + **Oracle 数据库**：sub-partition details 只需要提供一次。
