--- a/ppas/20180305/20180305_01.md
+++ b/ppas/20180305/20180305_01.md
@@ -30,6 +30,34 @@ CREATE TABLE SALES_DATA
    PARTITION Q4_2015 VALUES LESS THAN (TO_DATE(' 2016-01-01 00:00:00', 'SYYYY-MM-DD HH24:MI:SS'))
    ) ;
 
+SQL> select table_name,partition_name,subpartition_name,tablespace_name from user_tab_subpartitions where table_name='SALES_DATA';
+
+TABLE_NAME                     PARTITION_NAME                 SUBPARTITION_NAME              TABLESPACE_NAME
+------------------------------ ------------------------------ ------------------------------ ------------------------------
+SALES_DATA                     Q1_2015                        Q1_2015_NORTH                  USERS
+SALES_DATA                     Q1_2015                        Q1_2015_SOUTH                  USERS
+SALES_DATA                     Q1_2015                        Q1_2015_WEST                   USERS
+SALES_DATA                     Q1_2015                        Q1_2015_EAST                   USERS
+SALES_DATA                     Q1_2015                        Q1_2015_OTHERS                 USERS
+SALES_DATA                     Q2_2015                        Q2_2015_NORTH                  USERS
+SALES_DATA                     Q2_2015                        Q2_2015_SOUTH                  USERS
+SALES_DATA                     Q2_2015                        Q2_2015_WEST                   USERS
+SALES_DATA                     Q2_2015                        Q2_2015_EAST                   USERS
+SALES_DATA                     Q2_2015                        Q2_2015_OTHERS                 USERS
+SALES_DATA                     Q3_2015                        Q3_2015_NORTH                  USERS
+SALES_DATA                     Q3_2015                        Q3_2015_SOUTH                  USERS
+SALES_DATA                     Q3_2015                        Q3_2015_WEST                   USERS
+SALES_DATA                     Q3_2015                        Q3_2015_EAST                   USERS
+SALES_DATA                     Q3_2015                        Q3_2015_OTHERS                 USERS
+SALES_DATA                     Q4_2015                        Q4_2015_NORTH                  USERS
+SALES_DATA                     Q4_2015                        Q4_2015_SOUTH                  USERS
+SALES_DATA                     Q4_2015                        Q4_2015_WEST                   USERS
+SALES_DATA                     Q4_2015                        Q4_2015_EAST                   USERS
+SALES_DATA                     Q4_2015                        Q4_2015_OTHERS                 USERS
+
+20 rows selected.
+
+SQL> 
 ```
 
 2.**PPAS数据库**
