--- a/ppas/20180305/20180305_01.md
+++ b/ppas/20180305/20180305_01.md
@@ -155,6 +155,32 @@ Partitions: sales_data_east_q2 FOR VALUES IN ('II', 'JJ'),
             sales_data_west_q2 FOR VALUES IN ('FF', 'GG', 'HH'),
             sales_data_others_q2 DEFAULT
 
+edb=# select table_name,partition_name,subpartition_name,tablespace_name from user_tab_subpartitions where table_name='SALES_DATA';
+ table_name | partition_name | subpartition_name | tablespace_name 
+------------+----------------+-------------------+-----------------
+ SALES_DATA | Q1_2015        | OTHERS_Q1         | 
+ SALES_DATA | Q1_2015        | EAST_Q1           | 
+ SALES_DATA | Q1_2015        | WEST_Q1           | 
+ SALES_DATA | Q1_2015        | SOUTH_Q1          | 
+ SALES_DATA | Q1_2015        | NORTH_Q1          | 
+ SALES_DATA | Q2_2015        | OTHERS_Q2         | 
+ SALES_DATA | Q2_2015        | EAST_Q2           | 
+ SALES_DATA | Q2_2015        | WEST_Q2           | 
+ SALES_DATA | Q2_2015        | SOUTH_Q2          | 
+ SALES_DATA | Q2_2015        | NORTH_Q2          | 
+ SALES_DATA | Q3_2015        | OTHERS_Q3         | 
+ SALES_DATA | Q3_2015        | EAST_Q3           | 
+ SALES_DATA | Q3_2015        | WEST_Q3           | 
+ SALES_DATA | Q3_2015        | SOUTH_Q3          | 
+ SALES_DATA | Q3_2015        | NORTH_Q3          | 
+ SALES_DATA | Q4_2015        | OTHERS_Q4         | 
+ SALES_DATA | Q4_2015        | EAST_Q4           | 
+ SALES_DATA | Q4_2015        | WEST_Q4           | 
+ SALES_DATA | Q4_2015        | SOUTH_Q4          | 
+ SALES_DATA | Q4_2015        | NORTH_Q4          | 
+(20 rows)
+
+edb=# 
 ```
 
 ### 三、参考链接
