--- a/ppas/20181122/20181122_01.md
+++ b/ppas/20181122/20181122_01.md
@@ -19,7 +19,43 @@ SELECT * FROM TABLE(function_name(...))
 ### 三、转换规则
 1. **Oracle数据库**
 ```
+CREATE TYPE t_tf_row AS OBJECT (
+  id           NUMBER,
+  description  VARCHAR2(50)
+);
+/
 
+CREATE TYPE t_tf_tab IS TABLE OF t_tf_row;
+
+-- Build a pipelined table function.
+CREATE OR REPLACE FUNCTION get_tab_ptf (p_rows IN NUMBER) RETURN t_tf_tab PIPELINED AS
+BEGIN
+  FOR i IN 1 .. p_rows LOOP
+    PIPE ROW(t_tf_row(i, 'Description for ' || i));
+  END LOOP;
+
+  RETURN;
+END;
+/
+
+SELECT *
+FROM  TABLE(get_tab_ptf(10))
+ORDER BY id DESC;
+
+        ID DESCRIPTION
+---------- --------------------------------------------------
+        10 Description for 10
+         9 Description for 9
+         8 Description for 8
+         7 Description for 7
+         6 Description for 6
+         5 Description for 5
+         4 Description for 4
+         3 Description for 3
+         2 Description for 2
+         1 Description for 1
+
+10 rows selected.
 ```
 
 2. **PPAS数据库**
